[metadata]
name = wildsync
version = 0.0.1
description = Fuzzing harness generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spencerwuwu/WildSync
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    networkx==2.6.3
    tree-sitter==0.20.1
    pydot==1.4.1
    typer==0.4.1
    loguru==0.6.0
    setuptools==78.1.0
    comex @ git+https://github.com/spencerwuwu/tree-sitter-codeviews.git

python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src
